modules/rds_sg.tf
# Create RDS Security Group
resource "aws_security_group" "rds_sg" {
  name        = "database-security-group"
  description = "Security group for RDS instance"
  vpc_id      = aws_vpc.vpc.id

  # PostgreSQL traffic from Application Security Group
  ingress {
    from_port       = 5432
    to_port         = 5432
    protocol        = "tcp"
    security_groups = [aws_security_group.app_sg.id]
  }

  tags = {
    Name = "database-security-group"
  }
}
